--- a/index.html
+++ b/index.html
@@ -2,99 +2,120 @@
 <html lang="vi">
 <head>
 <meta charset="UTF-8">
-<title>Vòng quay trúng thưởng</title>
+<title>Vòng Quay Tri Ân Khách Hàng</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
 <style>
 body {
-    background: #f4f6f8;
+    margin: 0;
     font-family: Arial, sans-serif;
+    background: linear-gradient(180deg, #c62828, #f9a825);
+    color: #fff;
     text-align: center;
 }
 
-h2 {
-    margin-top: 30px;
+h1 {
+    margin-top: 20px;
+    font-size: 24px;
+}
+
+.subtitle {
+    font-size: 14px;
+    opacity: 0.9;
 }
 
 .wheel-wrapper {
     position: relative;
-    width: 320px;
-    height: 320px;
-    margin: 30px auto;
+    width: 300px;
+    height: 300px;
+    margin: 25px auto;
 }
 
-#wheel {
+canvas {
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    border: 8px solid #fff;
-    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    background: #fff;
+    box-shadow: 0 0 15px rgba(0,0,0,0.4);
     transition: transform 5s cubic-bezier(0.25, 0.1, 0.25, 1);
 }
 
-/* Kim chỉ */
 .pointer {
     position: absolute;
-    top: -15px;
+    top: -10px;
     left: 50%;
     transform: translateX(-50%);
     width: 0;
     height: 0;
-    border-left: 12px solid transparent;
-    border-right: 12px solid transparent;
-    border-bottom: 25px solid red;
+    border-left: 14px solid transparent;
+    border-right: 14px solid transparent;
+    border-bottom: 28px solid #ffd700;
     z-index: 10;
 }
 
-#spin {
-    padding: 12px 30px;
+button {
+    background: #ffd700;
+    color: #b71c1c;
     font-size: 18px;
-    background: #ff5722;
-    color: #fff;
+    font-weight: bold;
     border: none;
-    border-radius: 6px;
+    border-radius: 30px;
+    padding: 12px 35px;
     cursor: pointer;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.3);
 }
 
-#spin:disabled {
+button:disabled {
     background: #ccc;
     cursor: not-allowed;
+}
+
+.footer {
+    margin-top: 20px;
+    font-size: 12px;
+    opacity: 0.85;
 }
 </style>
 </head>
 
 <body>
 
-<h2>🎁 Vòng Quay Trúng Thưởng 🎁</h2>
+<h1>🎊 TRI ÂN KHÁCH HÀNG 🎊</h1>
+<div class="subtitle">Quay vòng may mắn – Nhận quà liền tay</div>
 
 <div class="wheel-wrapper">
     <div class="pointer"></div>
     <canvas id="wheel" width="300" height="300"></canvas>
 </div>
 
-<button id="spin">QUAY NGAY</button>
+<button id="spin">🎁 QUAY NGAY</button>
+
+<div class="footer">
+    Chúc Quý Khách Năm Mới An Khang – Phát Tài 🎉
+</div>
 
 <script>
 const canvas = document.getElementById("wheel");
 const ctx = canvas.getContext("2d");
 
 const prizes = [
-    "100K",
-    "200K",
-    "300K",
-    "500K",
-    "1 TRIỆU",
-    "CHÚC MAY MẮN"
+    "💰 Lì xì 500K",
+    "🎁 Quà tri ân",
+    "🥤 Thùng Pepsi",
+    "🍊 Lì xì may mắn",
+    "🎁 Quà tri ân",
+    "🍊 Lì xì may mắn"
 ];
 
 const colors = [
-    "#FFCDD2",
-    "#F8BBD0",
-    "#E1BEE7",
-    "#BBDEFB",
-    "#C8E6C9",
-    "#FFF9C4"
+    "#d32f2f",
+    "#fbc02d",
+    "#1976d2",
+    "#ff7043",
+    "#c62828",
+    "#f9a825"
 ];
 
 const total = prizes.length;
@@ -115,7 +136,7 @@ function drawWheel() {
         ctx.translate(150, 150);
         ctx.rotate(arc * i + arc / 2);
         ctx.textAlign = "right";
-        ctx.fillStyle = "#333";
+        ctx.fillStyle = "#fff";
         ctx.font = "bold 14px Arial";
         ctx.fillText(prizes[i], 140, 5);
         ctx.restore();
@@ -126,22 +147,25 @@ drawWheel();
 
 $("#spin").click(function () {
     if (spinning) return;
+
+    // if (localStorage.getItem("da_quay")) {
+    //     alert("🎉 Quý khách đã quay rồi. Xin cảm ơn!");
+    //     return;
+    // }
+
     spinning = true;
     $("#spin").prop("disabled", true);
 
-    // Random kết quả
     const index = Math.floor(Math.random() * total);
-
-    // Quay 6 vòng + vị trí trúng
     const rotateDeg = 360 * 6 + (360 / total) * index;
     rotation += rotateDeg;
 
     canvas.style.transform = `rotate(${rotation}deg)`;
 
     setTimeout(() => {
-        alert("🎉 Bạn trúng: " + prizes[index]);
+        alert("🎊 Chúc mừng! Bạn trúng: " + prizes[index]);
+        // localStorage.setItem("da_quay", "true");
         spinning = false;
-        $("#spin").prop("disabled", false);
     }, 5000);
 });
 </script>
