--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ canvas#wheel {
     height: 0;
     border-left: 16px solid transparent;
     border-right: 16px solid transparent;
-    border-bottom: 32px solid #ffd700;
+    border-top: 32px solid #ffd700;
     filter: drop-shadow(0 2px 4px rgba(0,0,0,0.5));
     z-index: 10;
 }
