--- a/index.html
+++ b/index.html
@@ -244,7 +244,18 @@ button:disabled {
 <div id="mai-fall"></div>
 
 <script>
-const maiIcons = ["🌼", "🧧", "🎊"];
+    const maiIcons = [
+    "🌼", // hoa mai
+    "🧧", // bao lì xì
+    "🎊", // pháo giấy
+    "🎆", // pháo hoa
+    "🍊", // quýt/cam may mắn
+    "🐇", // linh vật (ví dụ năm Thỏ)
+    "🥳", // mặt cười ăn mừng
+    "💮", // hoa trang trí
+    "🏮", // lồng đèn đỏ
+    "✨"  // ánh sáng lấp lánh
+    ];
 
 function createMai() {
     const mai = document.createElement("div");
