--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <title>Vòng Quay Tri Ân Khách Hàng</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>🧧</text></svg>">
+
 
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
